; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_check-integrity.c_btrfsic_block_link_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_check-integrity.c_btrfsic_block_link_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfsic_block_link = type { i32, i32*, i32*, i32, i32, i32, i32 }

@BTRFSIC_BLOCK_LINK_MAGIC_NUMBER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.btrfsic_block_link*)* @btrfsic_block_link_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @btrfsic_block_link_init(%struct.btrfsic_block_link* %0) #0 {
  %2 = alloca %struct.btrfsic_block_link*, align 8
  store %struct.btrfsic_block_link* %0, %struct.btrfsic_block_link** %2, align 8
  %3 = load i32, i32* @BTRFSIC_BLOCK_LINK_MAGIC_NUMBER, align 4
  %4 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %5 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %4, i32 0, i32 6
  store i32 %3, i32* %5, align 4
  %6 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %7 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %6, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %9 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %8, i32 0, i32 5
  %10 = call i32 @INIT_LIST_HEAD(i32* %9)
  %11 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %12 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %11, i32 0, i32 4
  %13 = call i32 @INIT_LIST_HEAD(i32* %12)
  %14 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %15 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %14, i32 0, i32 3
  %16 = call i32 @INIT_LIST_HEAD(i32* %15)
  %17 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %18 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %17, i32 0, i32 2
  store i32* null, i32** %18, align 8
  %19 = load %struct.btrfsic_block_link*, %struct.btrfsic_block_link** %2, align 8
  %20 = getelementptr inbounds %struct.btrfsic_block_link, %struct.btrfsic_block_link* %19, i32 0, i32 1
  store i32* null, i32** %20, align 8
  ret void
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
